# iack-framework

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  labels.ps1  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  manual-release-check.yml  publish.yml  python-ci.yml  tests.yml
data/input/: sample_assessment.json
data/output/: assessment_result.csv  assessment_result.json  assessment_result.md  assessment_result_mapped.json
docs/: architecture.md  architecture.mmd  framework-summary.md
examples/: assessment-input.json  expected-output.json
scripts/: run_assessment.ps1
src/: metric_validation.py  metrics.py
src/iack/mappings/: csf_mapping.py
src/iack/metrics/: model.py
src/iack/outputs/: report_writer.py
src/iack/validators/: assessment_validator.py
tests/: test_cli_smoke.py  test_csf_mapping.py  test_metric_validation.py  test_metrics.py  test_model.py  test_pipeline_integration.py  test_report_writer.py  test_validator.py
