[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "iack-framework"
version = "0.2.0"
description = "Integrity-Authenticity-Confidentiality-Key management cybersecurity framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Felix Cepeda", email = "felicepeda@hotmail.com" }
]
dependencies = []

[project.scripts]
iack-validate = "iack.validators.assessment_validator:main"
iack-score = "iack.metrics.model:main"
iack-map-csf = "iack.mappings.csf_mapping:main"
iack-report = "iack.outputs.report_writer:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]
include = ["iack*"]
namespaces = false